Tue Aug 13 17:53:58 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* texinfos.am (.texinfo.info): New target.
	(.texinfo.dvi): New target.

	From Jim Meyering:
	* automake.in (handle_texinfo): Use `.info[-0-9]*' as pattern to
	match info files.
	(handle_texinfo): Handle `.texinfo' files.

Mon Aug 12 10:28:46 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (require_file_internal): Special-case `.' when
	finding files to distribute.  Test libobj2.test.

	* aclocal.in (add_file): Fixed regexp for matching AC_DEFUN.  Test
	order.test.

	* m4/AM_HEADER_TIOCGWINSZ_NEEDS_SYS_IOCTL.m4: New file.
	* m4/AM_SYS_POSIX_TERMIOS.m4: New file.

	* compile-kr.am: Removed duplicate ansi2knr rules.

Sun Aug 11 00:20:16 1996  Tom Tromey  <tromey@creche.cygnus.com>

	* automake.in (handle_yacc_lex_cxx): Bug fix from Josh MacDonald.
	(handle_yacc_lex_cxx): Put C++ extensions on suffix list.
	(mkdir): Removed.

	* automake.in (initialize_global_constants): [common_files]
	Include interlock and ylwrap.

	* Released version 1.1c.

	* aclocal.in (obsolete_macros): md_TYPE_PTRDIFF_T and
	ud_PATH_LISPDIR are obsolete names.

	* m4/AM_LC_MESSAGES.m4, m4/AM_WITH_NLS.m4, m4/AM_GNU_GETTEXT.m4:
	Removed.

	* automake.in (handle_lib_objects): Changed interface.  Now
	generates _DEPENDENCIES variable if appropriate.
	(handle_emacs_lisp): Use AM_PATH_LISPDIR.
	(scan_configure): Ditto.

	* Makefile.am (CLEANFILES): Removed.

	* automake.in (handle_configure): Define CONFIG_CLEAN_FILES.

	* clean.am (clean-generic): Remove $(CONFIG_CLEAN_FILES).

	* compile-vars.am (CC, CFLAGS, COMPILE, LINK): Removed.

	* automake.in (handle_yacc_lex_cxx): Require ylwrap in
	multi-lex/yacc case.
	(handle_source_transform): Changed return result.
	(handle_programs): Use linker returned by
	handle_source_transform.
	(seen_prog_cc, seen_prog_cxx): New globals.
	(scan_configure): Recognize AC_PROG_CC and AC_PROG_CXX.
	(handle_yacc_lex_cxx): Error message if AC_PROG_CXX or
	AC_PROG_YACC missing.