@@ -4,6 +4,11 @@ Priorities for release:
 !! Must fix require_file stuff.  It is really gross, and I don't
    understand it any more.
 
+* some options must be turned off when --gnu or higher
+  eg no-installinfo
+
+* must update GNU Hello
+
 ** when can aclocal.m4 be auto-generated?
 
 ** many requests for a way to omit a file from the distribution.
