@@ -1629,6 +1629,8 @@ sub handle_dependencies
 	{
 	    &pretty_print ('DEP_FILES =', "", sort keys %dep_files);
 	    $output_rules .= &file_contents ('depend');
+	    push (@clean, 'depend');
+	    &push_phony_cleaners ('depend');
 	    $output_rules .=
 		&file_contents_with_transform ('s/\@EXT\@/.c/g;'
 					       . 's/\@MKDEP\@/MKDEP/g',
