@@ -39,3 +39,12 @@ $(srcdir)/.deps/.P: $(BUILT_SOURCES)
 
 -include $(DEP_FILES)
 $(DEP_FILES): $(srcdir)/.deps/.P
+
+mostlyclean-depend:
+
+clean-depend:
+
+distclean-depend:
+
+maintainer-clean-depend:
+	rm -rf $(srcdir)/.deps
