@@ -1,3 +1,10 @@
+Sat Aug 17 11:27:14 1996  Tom Tromey  <tromey@creche.cygnus.com>
+
+	* automake.in (handle_dependencies): Push `depend'-clean targets
+	on @clean.
+	* depend.am (mostlyclean-depend, clean-depend, distclean-depend,
+	maintainer-clean-depend): New targets.
+
 Tue Aug 13 17:53:58 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 	* texinfos.am (.texinfo.info): New target.
